# tuni

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: lint_test.yml  lint_test_release.yml
benches/: README.md  benchmark.rs
src/: cli.rs  error.rs  gtf.rs  gtf_gff.rs  lib.rs  main.rs  unify.rs
tests/: integration_test.rs
tests/data/: gtf_paths.txt  gtf_paths_missing_gtf.txt  test_sample_1.gtf  test_sample_2.gtf
tests/data/benches/: gtf_paths.txt
tests/data/integration/: expected_sample_1.tuni.gff  expected_sample_1.tuni.gtf  expected_sample_2.tuni.gff  expected_sample_2.tuni.gtf  gff_paths.txt  gtf_paths.txt  sample_1.gff  sample_1.gtf  sample_2.gff  sample_2.gtf
tests/data/unit/: expected_unified_gtf.gtf  gtf_paths.txt  gtf_paths_includes_gff.txt  gtf_paths_missing_gtf.txt  sample_1.gff  sample_1.gtf  sample_2.gtf  test_sample_2.gtf
