[package]
name = "tuni"
version = "0.1.0"
edition = "2021"
authors = ["David Zhang <dyzhang32@gmail.com>"]
description = "Unify transcripts across different samples"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dzhang32/tuni"
keywords = ["gtf", "gff", "transcript-assembly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.61"

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = "0.5.1"
predicates = "3.1.0"
rstest = "0.21.0"
tempfile = "3.10.1"

[[bench]]
name = "benchmark"
harness = false
